stop jumping

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,6 @@
     scroll-behavior: smooth;
   }
 } */
+html {
+  overflow-y: scroll;
+}
